--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@headlessui/react": "^1.7.18",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
